# frederick-ferments-app

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  init.sql
backend/: .dockerignore  .env  Cargo.toml  DockerFile
backend/.sqlx/: query-006710d29effff7fd50caac53ea38077b1a1fb0fbcfcaa7852e4a26a0ee3592a.json  query-00b626ebc01937ab457b4f590c878a8ec9ddba721df967a9cb147f8abf120846.json  query-0334b19b0275803bc20acc648791084ff3b3d92591f27791babad18374bdfdf8.json  query-06fe057331f5f00d5ee7745320646244ebd438bf2fff23f4e05435b29673d318.json  query-075459c6c5bc3d9dcb1db2718c6821daa2841c5e366f60eec61ba8b61f45da1d.json  query-078d931e067b9d8ab943d454c9811d6f506b5461cd0460b6c940d6bab6f6984b.json  query-084a207c9f373d39bbacbc617d332bfa29df4f2879277eac55f2643336225c14.json  query-09825b0fa27575f2c99d7e78fb0b876c316a6bec1e4054432ae083b905777115.json  query-0bdd45360ce60a7be5eb62a00bedf71516c9eff721af5dc790c256412bdcf5af.json  query-138877554bfb7153140b16cb142c31ca2c925f0cafa3b2447c43ae4ef06780c0.json  query-192ec4cb74aacbb66ab58fc8a3a7e3d3540fe6c0338ce093c519b720b1b88f32.json  query-2c2535d908765a62009dbdc98033872b71da677a7ea2a4951acf331a031c8927.json  query-2f1b64eaadde0a64c338601ff92529c8926e76006715b38eaeca914b6a6e3047.json  query-3615d32a2086bacef5b31dd9b665dd5dce43c556c528e261971742621d41786c.json  query-429fbaefc31b2bd5d3d0f0f064b199d27e8f10281364c492a3b85ad1c9b6c0e4.json  query-44f14b7845ba3463fdac8c84ffdd0f3f4125a74d339add13b87474020dfac2ed.json  query-47f9a553148f59749b82b36ead544db874a1625fddf157af6394e77e20164554.json  (+55 more)
backend/src/: main.rs
frontend/: pubspec.yaml
(+46 files in other folders)
