[package]
name = "frederick-ferments-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["cors"] }

#graphql
async-graphql = { version = "7.0.17", features = ["uuid", "chrono", "bigdecimal"] }
async-graphql-axum = "7.0.17"


# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal"] }


# Utilities
uuid = { version ="1.18.1", features = ["v4", "serde"] }
chrono = { version ="0.4.42", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
serde = { version ="1.0.225", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.99"

# Environment variables
dotenvy = "0.15.7"
